@@ -1,6 +1,7 @@
 Version 0.5.2:
 
 	* Fix translation keys
+	* add ecl2salliere script
 
 Version 0.5.1:
 
